--- a/docker-compose-ps.yml
+++ b/docker-compose-ps.yml
@@ -1,17 +1,16 @@
 version: '3.7'
 services:
-  node-app:
-    build: ./artifacts/gate-simulator
-    image: node:alpine
+  mysql:
+    image: mysql:8.0.22
     ports:
-        - '9999:9999'
-  postgresql:
-    image: postgres:alpine
-    ports:
-      - '5432:5432'
-    volumes:
-      - ./data:/var/lib/postgres
+      - '3306:3306'
     environment:
-      - POSTGRES_DB=app
-      - POSTGRES_USER=app
-      - POSTGRES_PASSWORD=9mREsvXDs9Gk89Ef
+      - MYSQL_RANDOM_ROOT_PASSWORD=yes
+      - MYSQL_DATABASE=app
+      - MYSQL_USER=app
+      - MYSQL_PASSWORD=pass
+  node-app:
+    build: ./node-gate-simulator
+    image: node-app:1.0
+    ports:
+      - '9999:9999'
